# game-of-life

./: .gitignore  CMakeLists.txt
src/: ConsoleRenderer.cpp  ConsoleRenderer.h  Game.cpp  Game.h  Grid.cpp  Grid.h  Viewport.h  main.cpp
